--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -1,11 +1,13 @@
-@import url(https://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
-
 html, body {
-  font-family: 'Noto Sans Japanese';
+  font-family: Arial, sans-serif;
   padding: 0;
   margin: 0;
   color: #212121;
   overflow: hidden;
+}
+
+a {
+  text-decoration: none;
 }
 
 #app-notifier {
@@ -50,4 +52,37 @@ html, body {
 
 .send-msg-btn:focus, .send-msg-btn:hover {
   box-shadow: 0 0 35px 0 rgba(70, 70, 70, 0.8);
+}
+
+.link-opener {
+  position: fixed;
+  display: block;
+  bottom: 10px;
+  right: 10px;
+  height: 60px;
+  line-height: 60px;
+  text-align: center;
+  padding: 0 30px;
+  min-width: 200px;
+  background-color: rgba(0, 195, 140, 0.75);
+  color: white;
+  font-size: 18px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px 0 rgba(70, 70, 70, 0.7);
+}
+
+.link-opener:focus, .link-opener:hover {
+  background-color: rgba(0, 195, 140, 0.90);
+  box-shadow: 0 0 22px 0 rgba(70, 70, 70, 0.8);
+}
+
+.messages {
+  margin: 20px;
+  overflow-y: scroll;
+}
+
+.messages p {
+  margin: 0;
+  padding-bottom: 8px;
+  font-size: 18px;
 }
