--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -77,12 +77,26 @@ a {
 }
 
 .messages {
-  margin: 20px;
+  background-color: #fff;
+  margin: 15px;
+  padding-top: 8px;
+  padding-left: 10px;
+  height: 50vh;
+  width: 700px;
   overflow-y: scroll;
+  border-radius: 8px;
+  box-shadow: 0 0 10px 0 rgba(70, 70, 70, 0.7);
 }
 
 .messages p {
+  background-color: #fff;
   margin: 0;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
+  padding: 0 12px;
   font-size: 18px;
+  height: 26px;
+  line-height: 26px;
+  width: 480px;
+  box-shadow: 0 0 10px 0 rgba(70, 70, 70, 0.7);
+  border-radius: 8px;
 }
